--- a/trunk/web/developer.pardus.org.tr/source/_templates/index.html
+++ b/trunk/web/developer.pardus.org.tr/source/_templates/index.html
@@ -34,10 +34,31 @@ For further information, please visit <a href="http://www.pardus.org.tr/eng" tar
     <tr>
         <td style="padding-bottom:6px;">
             <img src="_static/icons/bullet.png" />
+            <a class="biglink" href="{{ pathto("newcontributor/areas-to-contribute") }}">Areas to Contribute</a><br />
+            <span class="bulletlinkdescr">The different areas to contribute Pardus</span>
+        </td>
+    </tr>
+    <tr>
+        <td style="padding-bottom:6px;">
+            <img src="_static/icons/bullet.png" />
+            <a class="biglink" href="{{ pathto("newcontributor/how-to-be-contributor") }}">How to be a Contributor?</a><br />
+            <span class="bulletlinkdescr">Contributor Mentoring Process</span>
+        </td>
+    </tr>
+    <tr>
+        <td style="padding-bottom:6px;">
+            <img src="_static/icons/bullet.png" />
+            <a class="biglink" href="{{ pathto("newcontributor/creating-svn-account") }}">Creating SVN Crypt Password</a><br />
+            <span class="bulletlinkdescr">Creating an output for the creation of SVN account</span>
+        </td>
+    </tr>
+    <!--tr>
+        <td style="padding-bottom:6px;">
+            <img src="_static/icons/bullet.png" />
             <a class="biglink" href="{{ pathto("newcontributor/application/index") }}">Applying for an SVN account</a><br />
             <span class="bulletlinkdescr">Contribute patches, help in translation, join the community</span>
         </td>
-    </tr>
+    </tr-->
 </table>
 
 <img class="logo" src="_static/icons/documentation.png" />
