--- a/web/developer.pardus.org.tr/source/_templates/index.html
+++ b/web/developer.pardus.org.tr/source/_templates/index.html
@@ -4,99 +4,61 @@
 
 <img class="logo" src="_static/icons/pardus_logo.png" />
 <h2>What is Pardus?</h2>
-
 <p>
 Pardus is an open source, freely distributable, GPL (General Public License) licensed user-friendly GNU/Linux distribution with many usability, hardware compatibility, stability and security enhancements. It's named after the Anatolian Leopard.
 </p>
-
 <p>
 Pardus officially supports 11 languages: Turkish, English, Dutch, French, German, Spanish, Catalan, Italian, Swedish, Polish and Brazilian Portuguese.
 </p>
-
 <p>The Pardus project is sponsored by the Turkish National Research Institute of Electronics and Cryptology (<a href="http://uekae.tubitak.gov.tr/home.do?ot=10&lang=en&sid=0&pid=0" target="_blank">UEKAE</a>), an affiliate of the Scientific and Technological Research Council of Turkey (<a href="http://www.tubitak.gov.tr/home.do?ot=10&lang=en" target="_blank">TÜBİTAK</a>).
 </p>
-
 <p>
 For further information, please visit <a href="http://www.pardus.org.tr/eng" target="_blank">http://www.pardus.org.tr/eng</a>
 </p>
 
-<img class="logo" src="_static/icons/contribute.png" />
-<h2>Contributing to Pardus</h2>
-
+<h2>To get started...</h2>
+<p>
 <table class="contentstable" align="center">
     <tr>
-        <td style="padding-bottom:6px;">
-            <img src="_static/icons/bullet.png" />
-            <a class="biglink" href="{{ pathto("newcontributor/index") }}">New contributor's guide</a><br />
-            <span class="bulletlinkdescr">An introductional guide for new contributor candidates</span>
-        </td>
-    </tr>
-    <tr>
-        <td style="padding-bottom:6px;">
-            <img src="_static/icons/bullet.png" />
-            <a class="biglink" href="{{ pathto("newcontributor/areas-to-contribute") }}">Areas to Contribute</a><br />
-            <span class="bulletlinkdescr">The different areas to contribute Pardus</span>
-        </td>
-    </tr>
-    <tr>
-        <td style="padding-bottom:6px;">
-            <img src="_static/icons/bullet.png" />
-            <a class="biglink" href="{{ pathto("newcontributor/how-to-be-contributor") }}">How to be a Contributor?</a><br />
-            <span class="bulletlinkdescr">Contributor Mentoring Process</span>
-        </td>
-    </tr>
-    <tr>
-        <td style="padding-bottom:6px;">
-            <img src="_static/icons/bullet.png" />
-            <a class="biglink" href="{{ pathto("newcontributor/creating-svn-account") }}">Creating SVN Crypt Password</a><br />
-            <span class="bulletlinkdescr">Creating an output for the creation of SVN account</span>
-        </td>
-    </tr>
-    <!--tr>
-        <td style="padding-bottom:6px;">
-            <img src="_static/icons/bullet.png" />
-            <a class="biglink" href="{{ pathto("newcontributor/application/index") }}">Applying for an SVN account</a><br />
-            <span class="bulletlinkdescr">Contribute patches, help in translation, join the community</span>
-        </td>
-    </tr-->
-</table>
-
-<img class="logo" src="_static/icons/documentation.png" />
-<h2>Documentation</h2>
-
-<table class="contentstable" align="center">
-    <tr>
-        <td width="25%">
+        <td width="16%">
             <p class="biglink">
-            <a class="biglink" href="{{ pathto("comar/index") }}">COMAR</a><br />
-            <span class="linkdescr">Configuration Manager</span>
+                <a class="biglink" href="{{ pathto("releases/index") }}">Releases</a><br />
+                <span class="linkdescr">Pardus Releases</span>
             </p>
-            <p class="biglink"><a class="biglink" href="{{ pathto("pisi/index") }}">Pisi</a><br/>
-            <span class="linkdescr">Package Management</span></p>
-            <p class="biglink"><a class="biglink" href="{{ pathto("releases/index") }}">Roadmap</a><br/>
-            <span class="linkdescr">Release Schedules</span></p>
         </td>
-        <td width="25%">
-            <p class="biglink"><a class="biglink" href="{{ pathto("yali/index") }}">YALI</a><br/>
-            <span class="linkdescr">Yet Another Linux Installer</span></p>
-            <p class="biglink"><a class="biglink" href="{{ pathto("pardusman/index") }}">Pardusman</a><br/>
-            <span class="linkdescr">Pardus ISO Creator</span></p>
+        <td width="16%">
+            <p class="biglink">
+                <a class="biglink" href="{{ pathto("projects/index") }}">Projects</a><br />
+                <span class="linkdescr">Pardus Projects</span>
+            </p>
         </td>
-        <td width="25%">
-            <p class="biglink"><a class="biglink" href="{{ pathto("managers/index") }}">Manager Family</a><br/>
-            <span class="linkdescr">Task-specific GUI Tools</span></p>
-            <p class="biglink"><a class="biglink" href="{{ pathto("kaptan/index") }}">Kaptan</a><br/>
-            <span class="linkdescr">Desktop Configuration Tool</span></p>
+        <td width="16%">
+            <p class="biglink">
+                <a class="biglink" href="{{ pathto("guides/index") }}">Guides</a><br />
+                <span class="linkdescr">Guides to get started</span>
+            </p>
         </td>
-        <td width="25%">
-            <p class="biglink"><a class="biglink" href="{{ pathto("howto/index") }}">HOWTO</a><br/>
-            <span class="linkdescr">HOWTO Guides</span></p>
-            <p class="biglink"><a class="biglink" href="{{ pathto("contents") }}">Full Content</a><br/>
-            <span class="linkdescr">Whole documentation</span></p>
+        <td width="16%">
+            <p class="biglink">
+                <a class="biglink" href="{{ pathto("policies/index") }}">Policies</a><br />
+                <span class="linkdescr">To get things done</span>
+            </p>
+        </td>
+        <td width="16%">
+            <p class="biglink">
+                <a class="biglink" href="{{ pathto("events/index") }}">Events</a><br />
+                <span class="linkdescr">Events for open source</span>
+            </p>
+        </td>
+        <td width="16%">
+            <p class="biglink">
+                <a class="biglink" href="http://planet.pardus.org.tr">Planet</a><br />
+                <span class="linkdescr">Developer's Planet</span>
+            </p>
         </td>
     </tr>
 </table>
-
+</p>
 <img class="logo" src="_static/icons/browse.png" />
 <h2>Browsing Pardus Repositories</h2>
 
@@ -113,5 +75,4 @@ You can browse our Subversion repository through <a href="http://svn.pardus.org.
 <pre>
   svn co https://svn.pardus.org.tr/pardus/devel/PACKAGE_PATH
 </pre>
-
 {% endblock %}
