--- a/web/developer.pardus.org.tr/source/_templates/layout.html
+++ b/web/developer.pardus.org.tr/source/_templates/layout.html
@@ -25,8 +25,10 @@
 
 {%- macro tableofcontents() %}
     {%- if title not in ['Pardus Developer Base'] %}
-        <h1>Table of Contents</h1>
-        {{ toc }}
+        <div class="quotebar">
+            <b>Table of Contents</b>
+            {{ toc }}
+        </div>
     {%- else %}
         <br />
     {%- endif %}
@@ -118,8 +120,8 @@
       {%- if builder != 'htmlhelp' %}
         <div class="bodywrapper">
       {%- endif %}
+          {{ tableofcontents() }}
           <div class="body">
-              {{ tableofcontents() }}
               {% block body %} {% endblock %}
           </div>
       {%- if builder != 'htmlhelp' %}
