--- a/trunk/web/developer.pardus.org.tr/source/_templates/index.html
+++ b/trunk/web/developer.pardus.org.tr/source/_templates/index.html
@@ -21,30 +21,35 @@ For further information, please visit <a href="http://www.pardus.org.tr/eng" tar
 <table class="contentstable" align="center">
     <tr>
         <td width="20%">
-            <p class="biglink">
+           <img class="section" src="_static/releases.png" />
+           <p class="biglink">
                 <a class="biglink" href="{{ pathto("releases/index") }}">Releases</a><br />
                 <span class="linkdescr">Pardus Releases</span>
             </p>
         </td>
         <td width="20%">
+           <img class="section" src="_static/projects.png" />
             <p class="biglink">
                 <a class="biglink" href="{{ pathto("projects/index") }}">Projects</a><br />
                 <span class="linkdescr">Pardus Projects</span>
             </p>
         </td>
         <td width="20%">
+           <img class="section" src="_static/guides.png" />
             <p class="biglink">
                 <a class="biglink" href="{{ pathto("guides/index") }}">Guides</a><br />
                 <span class="linkdescr">Guides to get started</span>
             </p>
         </td>
         <td width="20%">
+           <img class="section" src="_static/events.png" />
             <p class="biglink">
                 <a class="biglink" href="{{ pathto("events/index") }}">Events</a><br />
                 <span class="linkdescr">Events for open source</span>
             </p>
         </td>
         <td width="20%">
+           <img class="section" src="_static/planet.png" />
             <p class="biglink">
                 <a class="biglink" href="http://planet.pardus.org.tr">Planet</a><br />
                 <span class="linkdescr">Developer's Planet</span>
