--- a/web/developer.pardus.org.tr/source/_templates/index.html
+++ b/web/developer.pardus.org.tr/source/_templates/index.html
@@ -72,6 +72,6 @@ You can browse our Subversion repository through <a href="http://svn.pardus.org.
 
 <b>Source package repository</b>
 <pre>
-  svn co https://svn.pardus.org.tr/pardus/devel/PACKAGE_PATH
+  svn co https://svn.pardus.org.tr/pardus/RELEASE_NAME
 </pre>
 {% endblock %}
