--- a/trunk/web/developer.pardus.org.tr/source/_templates/index.html
+++ b/trunk/web/developer.pardus.org.tr/source/_templates/index.html
@@ -62,7 +62,7 @@ For further information, please visit <a href="http://www.pardus.org.tr/eng" tar
 <h2>Browsing Pardus Repositories</h2>
 
 <p>
-You can browse our Subversion repository through <a href="http://svn.pardus.org.tr/viewcvs">Pardus SVN Web Interface</a> or you can use SVN to checkout it:
+You can browse our Subversion repository through <a href="http://websvn.pardus.org.tr/">Pardus SVN Web Interface</a> or you can use SVN to checkout it:
 </p>
 
 <b>Individual technologies</b>
